Update index.html link whatsapp

--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
           </a>
 
 
-          <a href="#" target="_blank">
+          <a href="javascript:alert('ALMOST');" target="_blank">
 
             <img src=".//assests/images/whatsapp-icon.png" alt="" class="w-auto img-fluid mx-md-3 mx-sm-1"
               style="height:60px !important;">
