--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
     <div class="container bg-dark pt-5" id="contact" data-aos="fade-up" data-aos-duration="3000">
       <div class="row">
         <div class=" text-white" data-aos="fade-up" data-aos-duration="3000">
-          <h1 class="ff display-6 text-center">CONTACT US</h1>
+          <h1 class="ff display-6 text-center">CONTACT ME</h1>
           <p class="ff h6 fw-bold text-capitalize fst-italic pt-2 lh-lg justify-content-start select-text">You can contact me
             through the following social networking sites at any time you want, and I will try to answer any questions
             regarding programming and website design. Good luck.</p>
