--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Playwrite+NG+Modern:wght@100..400&display=swap"
     rel="stylesheet" />
-    <link rel="shortcut icon" type="image/x-icon" href="./assests/logo Osama Rajab/osama-high-resolution-logo-black-transparent.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="./assests/svg/undraw_developer_activity_re_39tg.svg" />
+
   <link rel="stylesheet" href="./css/aos.css">
   <title>Osama Rajab</title>
 
