--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ar" dir="ltr">
+<html lang="en" >
 
 <head>
   <meta charset="UTF-8" />
@@ -14,8 +14,7 @@
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Playwrite+NG+Modern:wght@100..400&display=swap"
     rel="stylesheet" />
-    <link rel="shortcut icon" type="image/x-icon" href="./assests/svg/undraw_developer_activity_re_39tg.svg" />
-
+  <link rel="shortcut icon" type="image/x-icon" href="./assests/svg/undraw_developer_activity_re_39tg.svg" />
   <link rel="stylesheet" href="./css/aos.css">
   <title>Osama Rajab</title>
 
@@ -36,10 +35,10 @@
               <a href="#" class="nav-link">Get STarted</a>
             </li>
             <li class="nav-item">
-              <a href="#skills" class="nav-link">Skils</a>
+              <a href="#skills" class="nav-link">Skills</a>
             </li>
             <li class="nav-item">
-              <a href="#services" class="nav-link">Sevices</a>
+              <a href="#services" class="nav-link">Services</a>
             </li>
             <li class="nav-item">
               <a href="javascript:alert('ALMOST');" class="nav-link">Projects</a>
@@ -102,7 +101,7 @@
             <div class=" ">
 
               <h1 class="ff display-6 text-info fw-bold fw-900">Skills</h1>
-              <p class="ff h6 fw-bold text-uppercase">FRONTEND WEB DEVELOPMENT</p>
+              <p class="ff h6 fw-bold text-uppercase">FRONTEND WEB developer</p>
             </div>
             <div class="d-flex justify-content-center align-items-center ">
 
@@ -346,7 +345,7 @@
           </a>
 
 
-          <a href="javascript:alert('ALMOST');">
+          <a href="#" target="_blank">
 
             <img src=".//assests/images/whatsapp-icon.png" alt="" class="w-auto img-fluid mx-md-3 mx-sm-1"
               style="height:60px !important;">
